--- a/package.json
+++ b/package.json
@@ -45,8 +45,6 @@
     "@storybook/addon-links": "^6.1.17",
     "@storybook/node-logger": "^6.1.17",
     "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "^6.1.17",
-    "eslint": "^7.19.0",
-    "eslint-config-google": "^0.14.0"
+    "@storybook/react": "^6.1.17"
   }
 }
