--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@storybook/addon-links": "^6.1.17",
     "@storybook/node-logger": "^6.1.17",
     "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "^6.1.17"
+    "@storybook/react": "^6.1.17",
+    "eslint-config-google": "^0.14.0"
   }
 }
