--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "react-step-progress": "^1.0.3",
+    "react-step-wizard": "^5.3.5",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
