--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "react-step-progress": "^1.0.3",
-    "react-step-wizard": "^5.3.5",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
@@ -48,6 +47,7 @@
     "@storybook/node-logger": "^6.1.17",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.17",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "react-step-wizard": "^5.3.5"
   }
 }
