--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.17",
     "eslint-config-google": "^0.14.0",
+    "react-router-dom": "^5.2.0",
     "react-step-wizard": "^5.3.5"
   }
 }
