--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@storybook/node-logger": "^6.1.17",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.17",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint-config-google": "^0.14.0",
     "react-router-dom": "^5.2.0",
     "react-step-wizard": "^5.3.5"
