--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "swiper": "^6.5.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
